--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,44 +24,65 @@ nav {
   transform: translate3d(-200px, 0, 0);
   transition: transform 0.6s ease; }
   nav ul {
+    display: none;
     list-style-type: none;
     margin-top: 150px; }
   nav .a1 {
     color: white;
     display: block;
-    text-align: center;
     padding: 20px  0;
     font-size: 18px; }
   nav .a1:hover {
-    border-left: 3px solid #5E96C1; }
+    color: #c6db22; }
+  nav .active {
+    color: #c6db22; }
   nav .icon {
     text-decoration: none;
     padding: 10px;
-    margin-bottom: 30px; }
-  nav .nav-toggle-btn {
+    margin-top: 60px;
+    margin-left: 15px;
+    color: white; }
+  nav .icon:hover {
+    color: #c6db22; }
+  nav .nav-toggle-btns {
     position: absolute;
-    margin: 30px 30px !important;
-    padding: 0px !important;
-    left: 200px;
-    display: block;
-    color: #245372; }
+    left: 57px;
+    display: absolute;
+    color: white; }
 
 .active-nav nav {
   transform: translate3d(0, 0, 0);
   transition: transform 0.6s ease; }
 
-.content {
-  padding-top: 300px;
-  text-align: center;
-  transition: transform 0.6s ease; }
-
-.active-nav .content {
-  transform: translate3d(10px, 0, 0); }
-
 #home {
-  background: url("https://hd.unsplash.com/reserve/22gQ9dqRziaAoZeBpZVY_kornmark-01.png");
+  background: url("https://hd.unsplash.com/photo-1430769860170-bea225f02277") fixed;
   width: 100%;
   background-size: cover;
   height: 700px; }
+  #home .nav-toggle-btn {
+    position: fixed;
+    padding: 0px !important;
+    left: 80px;
+    top: 30px;
+    display: block;
+    color: #59A594; }
+  #home .heading {
+    overflow-y: hidden;
+    position: relative;
+    top: 200px;
+    height: 350px; }
+  #home h1 {
+    text-align: center;
+    font-size: 45px;
+    font-family: Verdana;
+    padding: 50px;
+    position: relative;
+    top: 280px;
+    display: none;
+    color: #F8FFC5;
+    font-weight: 900; }
+    #home h1 span {
+      font-size: 35px;
+      font-weight: 300; }
 
 /*# sourceMappingURL=style.css.map */
