--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,9 @@ nav {
     display: none;
     list-style-type: none;
     margin-top: 150px; }
+    nav ul i {
+      position: relative;
+      top: 30px; }
   nav .a1 {
     color: white;
     display: block;
@@ -55,7 +58,7 @@ nav {
   transition: transform 0.6s ease; }
 
 #home {
-  background: url("https://hd.unsplash.com/photo-1430769860170-bea225f02277") fixed;
+  background: url("https://images.unsplash.com/photo-1475349048762-d286a3e98370?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&s=e59471589558220e80cbfd71a7631a5f") fixed;
   width: 100%;
   background-size: cover;
   height: 700px; }
@@ -65,24 +68,70 @@ nav {
     left: 80px;
     top: 30px;
     display: block;
-    color: #59A594; }
+    color: #FFFED1; }
   #home .heading {
     overflow-y: hidden;
-    position: relative;
+    position: absolute;
     top: 200px;
     height: 350px; }
   #home h1 {
     text-align: center;
     font-size: 45px;
-    font-family: Verdana;
+    font-family: 'Josefin Sans', sans-serif;
+    letter-spacing: 2px;
     padding: 50px;
     position: relative;
     top: 280px;
     display: none;
-    color: #F8FFC5;
+    color: #FFFEF7;
     font-weight: 900; }
     #home h1 span {
       font-size: 35px;
       font-weight: 300; }
+  #home .navbar-brand {
+    display: none;
+    font-family: 'Righteous', cursive;
+    font-size: 35px;
+    color: black;
+    position: absolute;
+    right: 50px;
+    top: 30px; }
+    #home .navbar-brand span {
+      color: #C6F322; }
+  #home .arrow {
+    display: flex;
+    justify-content: center; }
+    #home .arrow .arrows {
+      display: none; }
+    #home .arrow a {
+      position: absolute;
+      bottom: 40px;
+      text-decoration: none;
+      color: white; }
+
+#about {
+  width: 100%;
+  height: 500px;
+  background: #F3F0EB;
+  background-size: cover; }
+  #about .fade_heading .about h2 {
+    display: none;
+    text-align: center;
+    font-size: 45px;
+    margin: 30px 0; }
+  #about .paragraphs {
+    margin: 30px 0; }
+    #about .paragraphs .post {
+      display: none;
+      overflow-x: hidden; }
+      #about .paragraphs .post p {
+        padding-bottom: 30px; }
+    #about .paragraphs .icon {
+      display: flex;
+      justify-content: center; }
+      #about .paragraphs .icon a {
+        padding-bottom: 30px;
+        color: #79F52E;
+        display: none; }
 
 /*# sourceMappingURL=style.css.map */
