--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,3 @@
-/*!
- * Bootstrap v3.3.6 (http://getbootstrap.com)
- * Copyright 2011-2015 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
 * {
   margin: 0;
   padding: 0; }
@@ -58,7 +53,7 @@ nav {
   transition: transform 0.6s ease; }
 
 #home {
-  background: url("https://images.unsplash.com/photo-1475349048762-d286a3e98370?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&s=e59471589558220e80cbfd71a7631a5f") fixed;
+  background: url("https://hd.unsplash.com/photo-1418995231169-b6d53c7cdbac") fixed;
   width: 100%;
   background-size: cover;
   height: 700px; }
@@ -68,9 +63,8 @@ nav {
     left: 80px;
     top: 30px;
     display: block;
-    color: #FFFED1; }
+    color: white; }
   #home .heading {
-    overflow-y: hidden;
     position: absolute;
     top: 200px;
     height: 350px; }
@@ -92,17 +86,24 @@ nav {
     display: none;
     font-family: 'Righteous', cursive;
     font-size: 35px;
-    color: black;
+    color: white;
     position: absolute;
     right: 50px;
     top: 30px; }
     #home .navbar-brand span {
       color: #C6F322; }
   #home .arrow {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
     justify-content: center; }
     #home .arrow .arrows {
-      display: none; }
+      display: none;
+      color: #2F4241;
+      border: 1px solid #2F4241;
+      border-radius: 100px;
+      padding: 0px 10px; }
     #home .arrow a {
       position: absolute;
       bottom: 40px;
@@ -110,28 +111,117 @@ nav {
       color: white; }
 
 #about {
+  overflow-x: hidden;
+  overflow-y: hidden;
+  background-image: url("http://www.fortyonetwenty.com/wp-content/themes/4120/images/background_repeat.png");
   width: 100%;
   height: 500px;
-  background: #F3F0EB;
-  background-size: cover; }
+  background-repeat: repeat; }
   #about .fade_heading .about h2 {
+    font-family: 'Titillium Web', sans-serif;
+    color: #838383;
     display: none;
     text-align: center;
     font-size: 45px;
     margin: 30px 0; }
+    #about .fade_heading .about h2 b {
+      color: #2F4241; }
   #about .paragraphs {
     margin: 30px 0; }
     #about .paragraphs .post {
       display: none;
       overflow-x: hidden; }
       #about .paragraphs .post p {
-        padding-bottom: 30px; }
+        padding-bottom: 30px;
+        color: #838383;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
     #about .paragraphs .icon {
       display: flex;
       justify-content: center; }
       #about .paragraphs .icon a {
+        text-decoration: none;
         padding-bottom: 30px;
-        color: #79F52E;
+        color: #2F9A53;
         display: none; }
+
+@-webkit-keyframes pulse {
+  0%, 70% {
+    box-shadow: 0px 0px 0px 0px rgba(139, 195, 74, 0.5); }
+  100% {
+    box-shadow: 0px 0px 0px 50px rgba(139, 195, 74, 0); } }
+@keyframes pulse {
+  0%, 70% {
+    box-shadow: 0px 0px 0px 0px rgba(139, 195, 74, 0.5); }
+  100% {
+    box-shadow: 0px 0px 0px 50px rgba(139, 195, 74, 0); } }
+@keyframes paragraphAnim {
+  0% {
+    opacity: 0;
+    transform: translate3d(300px, 0, 0); }
+  90% {
+    opacity: 1;
+    transform: translate3d(-10px, 0px, 0); }
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0); } }
+@keyframes headingAnim {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, 100px, 0); }
+  90% {
+    opacity: 0.8;
+    transform: translate3d(0, -10px, 0); }
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0); } }
+#team {
+  background: url("https://hd.unsplash.com/photo-1467576700346-6eafdb3f3390") fixed;
+  width: 100%;
+  background-size: cover;
+  height: 500px;
+  overflow-y: hidden; }
+  #team .team .team_bg {
+    width: 100%;
+    height: 350px;
+    background: white;
+    opacity: 0.5;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    position: relative; }
+  #team .team .thirdHeading {
+    display: flex;
+    justify-content: center; }
+    #team .team .thirdHeading h3 {
+      color: #838383;
+      position: relative;
+      bottom: 350px;
+      font-size: 45px;
+      font-family: 'Titillium Web', sans-serif;
+      z-index: 99999999; }
+      #team .team .thirdHeading h3 b {
+        color: #2F4241; }
+  #team .team .input input {
+    position: relative;
+    left: 150px;
+    bottom: 300px;
+    z-index: 99999999;
+    background: none;
+    border: 1px solid black;
+    padding-left: 10px;
+    outline: none; }
+  #team .team .input label {
+    position: relative;
+    left: 150px;
+    bottom: 310px;
+    z-index: 99999999; }
+  #team .team .input textarea {
+    position: relative;
+    left: 150px;
+    bottom: 300px;
+    z-index: 99999999;
+    background: none;
+    border: 1px solid black;
+    padding-left: 10px; }
 
 /*# sourceMappingURL=style.css.map */
